# protobuf-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
analyzer/: Cargo.toml
analyzer/src/: lib.rs  resolve.rs  validate.rs  well_known.rs
analyzer/tests/: analyzer_test.rs
annotator/: Cargo.toml
annotator/src/: lib.rs  region.rs  walker.rs  wire.rs
annotator/tests/: annotator_test.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  rust_gen.rs  service_gen.rs
compiler/: Cargo.toml
compiler/src/: descriptor_set.rs  lib.rs  main.rs  resolver.rs
compiler/tests/: codegen_compile_test.rs  descriptor_set_test.rs  prost_compat_test.rs
conformance/: Cargo.toml  download_protos.sh
conformance/src/: lib.rs
conformance/tests/: conformance_test.rs
docs/: code-quality-findings.md  test-gap-analysis.md
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  parser.rs  source_info_builder.rs
parser/src/parser/: mod.rs  options.rs  parse_helpers.rs  tests.rs
parser/tests/: parse_files_test.rs  parser_test.rs  upstream_coverage_test.rs  upstream_parse_test.rs
proto-gen/: Cargo.toml
proto-gen/src/: data_gen.rs  lib.rs  schema_gen.rs  tests.rs
schema/: Cargo.toml
schema/src/: descriptor.rs  lib.rs  source_info.rs
scripts/: check_upstream_coverage.sh  test_mapping.jsonl  test_mapping_overrides.jsonl  verify_test_parity.py
test-utils/: Cargo.toml
test-utils/src/: lib.rs
testdata/: complex.proto  proto2_features.proto  simple.proto
wasm-api/: Cargo.toml
wasm-api/src/: lib.rs
